May 1, 2021 pitbox46
-Removed unnecessary @OnlyIn from HorseCombatControls