@@ -6,14 +6,17 @@ import github.pitbox46.horsecombatcontrols.network.EmptyPacket;
 import github.pitbox46.horsecombatcontrols.network.PacketHandler;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.settings.KeyBinding;
+import net.minecraft.entity.player.PlayerEntity;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.TickEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.DistExecutor;
+import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.client.registry.ClientRegistry;
 import net.minecraftforge.fml.common.Mod;
+import net.minecraftforge.fml.config.ModConfig;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import org.apache.logging.log4j.LogManager;
@@ -25,10 +28,12 @@ public class HorseCombatControls {
 
     private static KeyBinding toggleControls;
     public static CommonProxy PROXY;
+    private int tick = 0;
 
     public HorseCombatControls() {
         FMLJavaModLoadingContext.get().getModEventBus().addListener(this::onClientSetup);
         PROXY = DistExecutor.safeRunForDist(() -> ClientProxy::new, () -> CommonProxy::new);
+        ModLoadingContext.get().registerConfig(ModConfig.Type.SERVER, Config.SERVER_CONFIG);
         MinecraftForge.EVENT_BUS.register(this);
     }
 
@@ -40,9 +45,15 @@ public class HorseCombatControls {
     @OnlyIn(Dist.CLIENT)
     @SubscribeEvent
     public void onClientTick(TickEvent.ClientTickEvent event) {
-        if(toggleControls.isPressed() && Minecraft.getInstance().player != null) {
-            ((CombatModeAccessor) Minecraft.getInstance().player).toggleCombatMode();
-            PacketHandler.CHANNEL.sendToServer(new EmptyPacket(EmptyPacket.Type.TOGGLE_MODE));
+        PlayerEntity player = Minecraft.getInstance().player;
+        if(player != null && event.phase == TickEvent.Phase.END) {
+            if(++tick > 20) {
+                PacketHandler.CHANNEL.sendToServer(new EmptyPacket(EmptyPacket.Type.SYNC_MODE));
+                tick = 0;
+            }
+            if (toggleControls.isPressed()) {
+                PacketHandler.CHANNEL.sendToServer(new EmptyPacket(EmptyPacket.Type.TOGGLE_MODE));
+            }
         }
     }
 }
