@@ -1,6 +1,8 @@
 package github.pitbox46.horsecombatcontrols.network;
 
 import github.pitbox46.horsecombatcontrols.CombatModeAccessor;
+import github.pitbox46.horsecombatcontrols.Config;
+import net.minecraft.util.text.TranslationTextComponent;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
@@ -22,12 +24,23 @@ public class CommonProxy {
     //Server
     public void handleToggleMode(NetworkEvent.Context ctx) {
         if(ctx.getSender() != null) {
-            ((CombatModeAccessor) ctx.getSender()).toggleCombatMode();
-            PacketHandler.CHANNEL.send(PacketDistributor.ALL.noArg(), new UUIDPacket(ctx.getSender().getUniqueID()));
+            if(Config.LOCK_COMBAT_MODE.get()) {
+                ctx.getSender().sendStatusMessage(new TranslationTextComponent("message.horsecombatcontrols.locked"), true);
+                return;
+            }
+            boolean flag = ((CombatModeAccessor) ctx.getSender()).toggleCombatMode();
+            PacketHandler.CHANNEL.send(PacketDistributor.ALL.noArg(), new UUIDPacket(ctx.getSender().getUniqueID(), flag));
+        }
+    }
+
+    public void handleSyncMode(NetworkEvent.Context ctx) {
+        if(ctx.getSender() != null && Config.LOCK_COMBAT_MODE.get()) {
+            ((CombatModeAccessor) ctx.getSender()).setCombatMode(true);
+            PacketHandler.CHANNEL.send(PacketDistributor.ALL.noArg(), new UUIDPacket(ctx.getSender().getUniqueID(), true));
         }
     }
 
     //Client
-    public void handleToggleMode(NetworkEvent.Context ctx, UUID uuid) {
+    public void handleToggleMode(NetworkEvent.Context ctx, UUID uuid, boolean bool) {
     }
 }
