@@ -2,7 +2,8 @@ package github.pitbox46.horsecombatcontrols.network;
 
 public class EmptyPacket {
     public enum Type {
-        TOGGLE_MODE
+        TOGGLE_MODE,
+        SYNC_MODE
     }
     public Type type;
     public EmptyPacket(Type type) {
