@@ -1,4 +1,6 @@
 {
   "key.horsecombatcontrols.toggle": "Toggle horse combat controls",
-  "key.horsecombatcontrols.category": "Horse Combat Controls"
+  "key.horsecombatcontrols.category": "Horse Combat Controls",
+
+  "message.horsecombatcontrols.locked": "Horse combat controls are enforced by the world"
 }
