@@ -1,2 +1,5 @@
+May 18, 2021 pitbox46
+-Added server config ability to lock players into combat mode
+
 May 1, 2021 pitbox46
 -Removed unnecessary @OnlyIn from HorseCombatControls
